multiple tweaks, including revert to Open Sans for all headings, and moving the meta block to the bottom of posts

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: Digits by Me
 ---
 
 <section id="content">
+	<h1><i class="icon-th-list"></i>Recent Posts</h1>
 	<ol class="posts-list hfeed">
 {% for post in site.posts %}
 		<li>
