--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ title: Digits by Me
 		{% else %}
 		<span class="previous">previous</span>
 		{% endif %}
-		<span class="page_number">page {{ paginator.page }} of {{ paginator.total_pages }}</span>
+		<span class="page_number"> :: page {{ paginator.page }} of {{ paginator.total_pages }} :: </span>
 		{% if paginator.next_page %}
 		<a href="/page{{paginator.next_page}}" class="next">next</a>
 		{% else %}
